@@ -1,6 +1,10 @@
 # This is the full fwbackups changelog, with detailed listing of changes in the
 # c++ branch (version 1.44.0)
 || Version 1.44.0-prealpha changes ||
+* Mon Apr 27 2009 Stewart Adam <s.adam at diffingo.com>
+  - Store program data in ~/Library/Appliction Support/fwbackups on OS X
+  - Use QSettings for program settings
+
 * Sun Apr 26 2009 Stewart Adam <s.adam at diffingo.com>
   - Create the Restore UI, link button with the new window
   - Add note about Tango icons to AUTHORS
